--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 transform: rotateX(0deg) rotateY(0deg);
             }
 
+
             to {
                 transform: rotateX(360deg) rotateY(360deg);
 
@@ -30,6 +31,15 @@
         @keyframes open1 {
             from {
                 transform: translateZ(100px);
+            }
+
+            30% {
+                transform: translateZ(100px);
+
+            }
+
+            70% {
+                transform: translateZ(200px);
             }
 
             to {
@@ -42,6 +52,14 @@
                 transform: translateZ(-100px);
             }
 
+            30% {
+                transform: translateZ(-100px);
+            }
+
+            70% {
+                transform: translateZ(-200px);
+            }
+
             to {
                 transform: translateZ(-200px);
             }
@@ -50,6 +68,15 @@
         @keyframes open3 {
             from {
                 transform: translateY(-100px) rotateX(90deg);
+            }
+
+            30% {
+                transform: translateY(-100px) rotateX(90deg);
+
+            }
+
+            70% {
+                transform: translateY(-200px) rotateX(90deg);
             }
 
             to {
@@ -62,6 +89,14 @@
                 transform: translateY(100px) rotateX(90deg);
             }
 
+            30% {
+                transform: translateY(100px) rotateX(90deg);
+            }
+
+            70% {
+                transform: translateY(200px) rotateX(90deg);
+            }
+
             to {
                 transform: translateY(200px) rotateX(90deg);
             }
@@ -72,6 +107,15 @@
                 transform: translateX(-100px) rotateY(90deg);
             }
 
+            30% {
+                transform: translateX(-100px) rotateY(90deg);
+            }
+
+            70% {
+                transform: translateX(-200px) rotateY(90deg);
+
+            }
+
             to {
                 transform: translateX(-200px) rotateY(90deg);
             }
@@ -80,6 +124,14 @@
         @keyframes open6 {
             from {
                 transform: translateX(100px) rotateY(90deg);
+            }
+
+            30% {
+                transform: translateX(100px) rotateY(90deg);
+            }
+
+            70% {
+                transform: translateX(200px) rotateY(90deg);
             }
 
             to {
@@ -96,32 +148,32 @@
         }
 
         .forward {
-            animation: open1 1s linear infinite alternate;
+            animation: open1 2s linear infinite alternate;
             background: rgba(202, 132, 132, 0.479);
         }
 
         .back {
-            animation: open2 1s linear infinite alternate;
+            animation: open2 2s linear infinite alternate;
             background: rgba(132, 202, 173, 0.479);
         }
 
         .top {
-            animation: open3 1s linear infinite alternate;
+            animation: open3 2s linear infinite alternate;
             background: rgba(202, 132, 132, 0.479);
         }
 
         .bottom {
-            animation: open4 1s linear infinite alternate;
+            animation: open4 2s linear infinite alternate;
             background: rgba(132, 154, 202, 0.479);
         }
 
         .left {
-            animation: open5 1s linear infinite alternate;
+            animation: open5 2s linear infinite alternate;
             background: rgba(182, 132, 202, 0.479);
         }
 
         .right {
-            animation: open6 1s linear infinite alternate;
+            animation: open6 2s linear infinite alternate;
             background: rgba(202, 132, 165, 0.479);
         }
 
@@ -191,12 +243,12 @@
             <div class="o"></div>
             <div class="o"></div>
         </div>
-        <div class="forward">forward</div>
-        <div class="back">back</div>
-        <div class="top">top</div>
-        <div class="bottom">bottom</div>
-        <div class="left">left</div>
-        <div class="right">right</div>
+        <div class="forward"></div>
+        <div class="back"></div>
+        <div class="top"></div>
+        <div class="bottom"></div>
+        <div class="left"></div>
+        <div class="right"></div>
     </div>
 </body>
 
